# Event-Driven-Backend

./: .env.example  .gitignore  Cargo.toml  Makefile.toml  README.md  docker-compose.yml
crates/domain/: Cargo.toml
crates/domain/src/: errors.rs  event.rs  lib.rs
crates/domain/src/dispenses/: aggregate.rs  commands.rs  cqrs.rs  events.rs  inputs.rs  mod.rs  view.rs
docs/architecture/: generate_diagram.py
docs/bruno/: README.md  bruno.json
docs/bruno/dispensary/: Add Drugs.bru  Add Patient.bru  Complete Dispense.bru  Create Dispense.bru  Get Dispense.bru  Get Upload URL.bru  Upload Prescription File.bru  Upload Prescription.bru
docs/bruno/environments/: Local.bru
infra/aws/: main.tf  variables.tf
infra/local/: main.tf
infra/modules/dispensary/: apigateway.tf  dynamodb.tf  iam.tf  kinesis.tf  lambda.tf  outputs.tf  s3.tf  sqs.tf  variables.tf
lambdas/api/: Cargo.toml
lambdas/api/src/: main.rs
lambdas/projector-analyzer/: Cargo.toml
lambdas/projector-analyzer/src/: main.rs
lambdas/projector-views/: Cargo.toml
lambdas/projector-views/src/: main.rs
lambdas/publisher/: Cargo.toml
lambdas/publisher/src/: main.rs
