[workspace]
members = [
    "crates/domain",
    "lambdas/api",
    "lambdas/publisher",
    "lambdas/projector-views",
    "lambdas/projector-analyzer",
]
resolver = "2"

[workspace.dependencies]
# AWS SDK
aws-config = "1.5"
aws-sdk-dynamodb = "1.44"
aws-sdk-kinesis = "1.42"
aws-sdk-s3 = "1.48"
aws_lambda_events = "0.15"
lambda_runtime = "0.13"
lambda_http = "0.13"
axum-aws-lambda = "0.8"

# CQRS/ES
cqrs-es = "0.4"
dynamo-es = "0.4"

# Web framework
axum = { version = "0.7", features = ["macros"] }

# Async
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_dynamo = "4.2"
serde_bytes = "0.11"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Utils
chrono = { version = "0.4", features = ["serde"] }
ulid = "1.1"
derive-new = "0.7"
dotenvy = "0.15"
tower = "0.4"
