[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
domain = { path = "../../crates/domain" }

aws-config = { workspace = true }
aws-sdk-dynamodb = { workspace = true }
aws-sdk-s3 = { workspace = true }
lambda_http = { workspace = true }
axum = { workspace = true }
axum-aws-lambda = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
ulid = { workspace = true }
dotenvy = { workspace = true }
cqrs-es = { workspace = true }
dynamo-es = { workspace = true }
tower = { workspace = true }
