[package]
name = "publisher"
version = "0.1.0"
edition = "2021"

[dependencies]
domain = { path = "../../crates/domain" }

aws-config = { workspace = true }
aws-sdk-kinesis = { workspace = true }
aws_lambda_events = { workspace = true }
lambda_runtime = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_dynamo = { workspace = true }
serde_bytes = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
derive-new = { workspace = true }
